kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: reactapp
  name: reactapp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: reactapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: reactapp
    spec:
      containers:
      - image: 342315650485.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
        name: reactapp
        ports:
        - containerPort: 80
        resources: {}
status: {}
