kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: reactapp
  name: reactapp
spec:
  containers:
  - image: 342315650485.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
    name: reactapp
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
