kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: reactapp
  name: reactapp-service-nodeport
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: reactapp
  type: NodePort
status:
  loadBalancer: {}
