kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: reactapp
  name: reactapp-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: reactapp
  type: LoadBalancer
status:
  loadBalancer: {}
