kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "reactapp-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: reactp-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "reactapp-service-nodeport"
              servicePort: 80
